Project

General

Profile

Actions

Bug #16813

closed

Incorrect and Duplicated Method Docs - 2.6.1-core through 2.7.1-core

Bug #16813: Incorrect and Duplicated Method Docs - 2.6.1-core through 2.7.1-core

Added by SampsonCrowley (Sampson Crowley) over 6 years ago. Updated over 5 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
starting at 2.6.1
[ruby-core:98038]

Description

https://ruby-doc.org/core-2.7.1/Method.html#method-i-5B-5D

meth[args, ...] → obj has the correct explanation, but contains the example for #call instead of #[]

https://ruby-doc.org/core-2.7.1/Method.html#method-i-3E-3E

meth >> g → a_proc has the correct example, but contains the explanation for #<< instead of #>>


Files

Screenshot from 2020-04-23 15-45-25.png (43.6 KB) Screenshot from 2020-04-23 15-45-25.png Image of the issue SampsonCrowley (Sampson Crowley), 04/23/2020 09:45 PM
Actions

Also available in: PDF Atom