[DOC] Fixed explanation for Method#>> [Bug #16813] [ci skip]